--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/graphite-tabs.common.js",
   "module": "dist/graphite-tabs.esm.js",
   "browser": "dist/graphite-tabs.js",
+  "url": "",
   "scripts": {
     "build": "rollup -c",
     "start": "npm-run-all --parallel watch",
@@ -16,6 +17,7 @@
   "devDependencies": {
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
+    "braces": ">=2.3.1",
     "change-case": "^3.1.0",
     "create-banner": "^1.0.0",
     "npm-run-all": "^4.1.5",
